--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">reactNativeChatApp</string>
+    <string name="facebook_app_id">855358295009289</string>
+
 </resources>
